NDS-511 Change styling on form group component (#396)
* NDS-511 Remove border from  form group component

* NDS-511 Added heading level to form group-legend

* NDS-511 Update failing test cases

* NDS-511 Add heading level in formgroup docs

- Removed duplicate legend element from code
-Added font-family to legend heading

* NDS-511 Update form group documentation to clarify heading level behavior

* NDS-511 Clarify heading level description for form group component

* NDS-511 Fix formatting in form group example to ensure proper rendering

* NDS-511 Update snapshot for form group component to correct legend structure

* NDS-511 Update the documentation for headingLevel based on review comments

* NDS-511 Remove duplicate validation for headingLevel

* NDS-511 Remove form group-legend heading style
-Also removed unwanted paddings and margin
-Set padding to 0 to keep the component aligned with other components

* NDS-511 Update styling for form group component

* NDS-511 Removed unwanted margin left and right from form group

--- a/components/nds-form-group/scss/form-group.scss
+++ b/components/nds-form-group/scss/form-group.scss
@@ -4,9 +4,9 @@
 @use '@nice-digital/nds-core/scss/utils';
 
 .form-group {
-  border: utils.rem(1px) solid colours.$border;
-  margin-bottom: utils.rem(spacing.$medium);
-  padding: utils.rem(spacing.$small);
+  border: 0;
+  margin: 0 0 utils.rem(spacing.$medium) 0;
+  padding: 0;
 
   &--no-legend {
     border: none;
@@ -15,19 +15,21 @@
   &__legend {
     @include typography.font-size(p);
     font-weight: bold;
-    margin-left: utils.rem(-(spacing.$x-small));
-    padding-left: utils.rem(spacing.$x-small);
-    padding-right: utils.rem(spacing.$x-small);
+    margin-bottom: utils.rem(spacing.$medium);
+  }
+
+  &__legend--with-heading {
+    margin-bottom: 0;
   }
 
   &__hint {
     color: colours.$form-group-hint;
-    margin-top: utils.rem(spacing.$x-small);
+    margin-top: 0;
   }
 
   &__error-message {
     color: colours.$error;
     font-weight: bold;
-    margin-top: utils.rem(spacing.$x-small);
+    margin-top: 0;
   }
 }
